[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Images/player.png" type="Texture" id=2]
[ext_resource path="res://Images/light_texture.png" type="Texture" id=3]
[ext_resource path="res://Images/light_texture_off.png" type="Texture" id=4]
[ext_resource path="res://Sound/dead.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.01
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "dead",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 15.2184

[sub_resource type="Animation" id=9]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("LightOn:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.366021, -0.5 ),
"update": 0,
"values": [ 0.01, 1.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "last_level"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("LightOn:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 1.1, 1.2, 1.3, 1.7, 2.2, 2.3, 2.6, 2.8, 2.9, 4.1, 4.6, 5.8, 5.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false ]
}

[node name="Player" type="KinematicBody2D"]
light_mask = 0
z_index = 6
z_as_relative = false
collision_mask = 62
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 0
frames = SubResource( 7 )
animation = "dead"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
shape = SubResource( 8 )

[node name="LightOn" type="Light2D" parent="."]
z_as_relative = false
texture = ExtResource( 3 )
energy = 16.0
shadow_enabled = true

[node name="LightOff" type="Light2D" parent="."]
texture = ExtResource( 4 )
energy = 12.97
mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spawn = SubResource( 9 )

[node name="AnimationPlayerLastLevel" type="AnimationPlayer" parent="."]
anims/last_level = SubResource( 10 )

[node name="timerDead" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="timerDead" to="." method="_on_timerDead_timeout"]
